syntax = "proto3";
package even_connect.g2.service_id_def;


enum SID {
    UI_DEFAULT_APP_ID = 0; // 1d53d51
    UI_BACKGROUND_DASHBOARD_APP_ID = 1; // 1d53bb1
    UI_FOREGROUND_MEUN_ID = 3; // 1d53d31
    UI_FOREGROUND_NOTIFICATION_ID = 4; // 1d53b51
    UI_TRANSLATE_APP_ID = 5; // 1d53b11
    UI_TELEPROMPT_APP_ID = 6; // 1d53ad1
    UI_FOREGROUND_EVEN_AI_ID = 7; // 1d53b31
    UI_BACKGROUND_NAVIGATION_ID = 8; // 1d53ab1
    UI_SETTING_APP_ID = 9; // 1d53a91
    UI_TRANSCRIBE_APP_ID = 10; // 1d53af1
    UI_CONVERSATE_APP_ID = 11; // 1d53b91
    UI_QUICKLIST_APP_ID = 12; // 1d53a71
    SERVICE_SYNC_INFO_APP_ID = 13; // 1d53a51
    UI_HEALTH_APP_ID = 14; // 1d53a31
    UI_LOGGER_APP_ID = 15; // 1d53991
    UI_ONBOARDING_APP_ID = 16; // 1d539d1
    SERVICE_MODULE_CONFIGURE_APP_ID = 32; // 1d539f1
    UI_FOREGROUND_SYSTEM_ALERT_APP_ID = 33; // 1d53d11
    UX_DEVICE_SETTINGS_APP_ID = 128; // 1d53b71
    UX_GLASSES_CASE_APP_ID = 129; // 1d53a11
    UX_RING_ROW_DATA_ID = 144; // 1d53cf1
    UX_RING_DATA_RELAY_ID = 145; // 1d539b1
    UX_OTA_TRANSMIT_CMD_ID = 192; // 1d53c31
    UX_OTA_TRANSMIT_RAW_DATA_ID = 193; // 1d53c51
    UX_OTA_EXPORT_FILE_CMD_ID = 194; // 1d53cd1
    UX_OTA_EXPORT_FILE_RAW_DATA_ID = 195; // 1d53cb1
    UX_EVEN_FILE_SERVICE_CMD_SEND_ID = 196; // 1d53c11
    UX_EVEN_FILE_SERVICE_RAW_SEND_DATA_ID = 197; // 1d53bd1
    UX_EVEN_FILE_SERVICE_CMD_EXPORT_ID = 198; // 1d53bf1
    UX_EVEN_FILE_SERVICE_RAW_EXPORT_DATA_ID = 199; // 1d53c91
    INVALID_SERVICE_ID = 255; // 1d53c71
}
